2004-01-22  Jon Schewe  <jpschewe@mtu.net>
	* Release 0.3

	* src/net/mtu/eggplant/util/Debug.java: Deprecated Debug in favor
	of Log4j

	* src/net/mtu/eggplant/util/DefaultBean.java (DefaultBean): Fixed
	some method names.
	(DefaultBean): Added getPropertyChangeListeners methods.

2003-07-02  Jon Schewe  <jpschewe@mtu.net>

	* src/net/mtu/eggplant/util/network/TCPServer.java: Fixed javadoc

2002-09-30  Jon Schewe  <jpschewe@mtu.net>

	* src/net/mtu/eggplant/util/BasicFileFilter.java: Modified accept
	to allow directories to be selected.  This allows one to traverse
	through directories. 

2002-08-25  Jon Schewe  <jpschewe@mtu.net>
	
	* Release 0.2
	
2002-08-25  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Upgraded to junit-3.8

2002-05-27  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Upgraded to junit-3.7

2001-01-07  Jon Schewe  <jpschewe@mtu.net>

	* prj.el: Upgraded to junit-3.4

2000-12-29  Jon Schewe  <jpschewe@eggplant.mtu.net>

	* : Moved all files into the package net.mtu.eggplant and changed
	utils to util.  Also changed all file headers for new licensing,
	BSD style rather than LGPL.
	
2000-12-01  Jon Schewe  <jpschewe@eggplant.mtu.net>

	* utils/StringUtils.java: Found a bug with the replace string
	having the search string in it and calling searchAndReplace, gets
	into an infinite loop.

2000-11-14  Jon Schewe  <jpschewe@eggplant.mtu.net>

	* utils/DefaultBean.java: Made serializable so that it's easy to
	save things out.	

	* utils/algorithms/Finding.java: Added detect method.

	* utils/ComparisonUtils.java: Added some convenient comparison
	functions.  

	* utils/gui/SortableTable.java: Added ability to sort tables.

2000-10-19  Jon Schewe  <jpschewe@eggplant.mtu.net>

	* utils/algorithms/Copying.java: Added for copying Collections.

2000-10-10  Jon Schewe  <jpschewe@eggplant.mtu.net>

	* utils/Unique.java: Made anonymous inner class named so that
	javadoc doesn't get confused.  This bug has been reported to Sun.
